<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Hunter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="number_notify">Thông báo:</string>
    <string name="download">Tải Apps - Kiếm tiền</string>
    <string name="exchange">Đổi thưởng</string>
    <string name="intro_code">Mã giới thiệu</string>
    <string name="invite_friend">Mời bạn bè</string>
    <string name="friends_list">Danh sách bạn bè</string>
    <string name="income_statistic">Thống kê thu nhập</string>
    <string name="lucky_hand">Lá bài may mắn</string>
    <string name="terms_policy">Điều khoản sử dụng</string>
    <string name="usage_guide">Hướng dẫn sử dụng</string>
    <string name="settings">Cài đặt</string>
    <string name="contacts">Liên hệ</string>
    <string name="facebook_app_id">840614236033853</string>
    <!-- ducnm start -->
    <string name="connectErr">Thao tác thất bại, vui lòng kiểm tra lại kết nối mạng!</string>
     <string name="noNewApp">Hiện tại không có ứng dụng nào mới, xin vui lòng quay lại sau!</string>
    <string name="actionfail">Thao tác thất bại, vui lòng thử lại sau!</string>
    <string name="actionErr">Có lỗi xảy ra, vui lòng liên hệ để được trợ giúp!</string>
    <string name="badTransaction">Thao tác thất bại, phát hiện yêu cầu bất thường!</string>
    <string name="error">Có lỗi xảy ra vui lòng thử lại sau!</string>
    <string name="getCoinSuccess">Bạn đã nhận được </string>
    <string name="install">Install Now</string>
    <string name="unLogin">Hiện tại bạn chưa đăng nhập, hãy đăng nhập và bắt đầu săn xu!</string>
    <string name="unLucky">Chúc bạn may mắn lần sau!</string>
    <string name="Lucky">Bạn nhận được </string>
    <string name="luckeyCardText">Mỗi ngày bạn có cơ hội lật bài 1 lần để nhận coin</string>
    <string name="getCoin">Get Coin</string>
    <string name="processing">Đang xử lý, vui lòng chờ trong giây lát!</string>
    <string name="loadMore">Đang tải thêm dữ liệu, vui lòng chờ trong giây lát!</string>
    <string name="loadAll">Đã tải hết dữ liệu!</string>
    
    <!-- ducnm end -->
    <!-- Fragment Invite -->
    <string name="invite_code">Mã giới thiệu:</string>
    <string name="label_type_code">Nhập mã giới thiệu:</string>
    <string name="description">Gửi mã này cho bạn bè để nhập vào ô </string>
    <string name="type_invite_code">Nhập mã giới thiệu </string>
    <string name="invite_to">để nhận </string>
    <string name="invite_benefit"> xu với mỗi người bạn.</string>
    <string name="invite_income">1000</string>
    <string name="btn_submit">Xác nhận</string>
    <string name="invite_annotation">Mỗi tài khoản chỉ nhập được mã xác nhận 1 lần</string>
    <string name="label_share">CHIA SẺ APP VỚI BẠN BÈ </string>
    <string name="share_via_email">EMAIL</string>
    <string name="share_via_sms">SMS</string>
    <string name="share_via_gplus">GOOGLE+</string>
    <string name="share_via_fb">FACEBOOK</string>
    <string name="invite_code_error_toast">Bạn vừa nhập vào mã giới thiệu của chính mình. Hãy nhập mã giới thiệu của người đã giới thiệu ứng dụng với bạn.</string>
    <string name="share_content_fb">Ứng dụng hay vãi! Mau cài đặt app để check hàng nào, tham gia thì nhớ vote cho mình nhé. Mã số của mình là:  </string>
    <string name="share_title_fb">Check hàng online</string>

    <!-- Fragment Friend list -->
    <string name="label_number_friend">Số lượng bạn: </string>
    <string name="label_number_friend_of_friend">Số lượng bạn mức 2: </string>
    <!-- Detail Fragment -->
    <string name="txt_creat_date">Ngày kết bạn:</string>
    <string name="txt_share_benefit">Lợi nhuận chia sẻ:</string>
    <string name="app_benefit">Tải App:</string>
    <string name="friend_benefit">Bạn bè mức 2:</string>
    <string name="introduced_number">Số bạn đã giới thiệu được: </string>
    <!-- Fragment Statistic -->
    <string name="label_total">Total:</string>
    <string name="label_current">Current:</string>
    <string name="label_month">This month:</string>
    <string name="label_week">This week:</string>
    <string name="label_today">Today:</string>
    <string name="btn_show_off">Khoe bạn</string>
    <string name="btn_exchange">Đổi thưởng</string>
    <string name="from_install">Từ cài ứng dụng</string>
    <string name="from_f1">Từ bạn bè cài ứng dụng</string>
    <string name="from_f2">Từ bạn bè mức 2 cài ứng dụng</string>
    <string name="from_lucky">Từ lá bài may mắn</string>
    <string name="from_make_friend">Kết bạn thành công</string>
    <string name="earn">Bạn kiếm được: </string>
    <string name="dollar">$</string>
    <string name="tab_name1">Nhận thưởng</string>
    <string name="tab_name2">Đổi thưởng</string>
	<string name="vnd">VND</string>
	<string name="exchange_tab">Bạn đã đổi thưởng được</string>
	<string name="label_cost">Thẻ cào mệnh giá: </string>
	<string name="code_card">Mã thẻ: </string>
	<string name="nguytheo">Viettel</string>
	<string name="thucvi">Vinaphone</string>
	<string name="dongmo">Mobifone</string>
</resources>