<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_label_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_code"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/tv_content_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/tv_label_code"
        android:textColor="@color/orange"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_label_code"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/tv_label_type_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_description"
        android:layout_marginTop="15dp"
        android:text="@string/label_type_code"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_invite_code"
        style="@android:style/Widget.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_label_type_code"
        android:layout_below="@id/tv_description"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/tv_label_type_code"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/ln_submit_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_invite_code"
        android:orientation="horizontal"
        android:weightSum="6" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_weight="4"
            android:text="@string/invite_annotation" >
        </TextView>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@color/green"
            android:padding="10dp"
            android:text="@string/btn_submit"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln_submit_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/label_share"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ln_share1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_share"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:weightSum="4" >

        <TextView
            android:id="@+id/share_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/orange"
            android:drawableLeft="@drawable/icon_email"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/share_via_email"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/share_sms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:background="@color/orange"
            android:drawableLeft="@drawable/icon_sms"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/share_via_sms"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_share2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln_share1"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="4" >

        <TextView
            android:id="@+id/share_gplus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/orange"
            android:drawableLeft="@drawable/icon_gplus"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/share_via_gplus"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/share_fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2"
            android:background="@color/orange"
            android:drawableLeft="@drawable/icon_fb"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/share_via_fb"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>