<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/avatar"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/label_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/img_avatar"
            android:text="@string/label_total" />

        <TextView
            android:id="@+id/tv_num_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/label_total" />

        <TextView
            android:id="@+id/label_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_total"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_avatar"
            android:text="@string/label_current" />

        <TextView
            android:id="@+id/tv_num_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_total"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/label_current" />

        <TextView
            android:id="@+id/label_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_current"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_avatar"
            android:text="@string/label_month" />

        <TextView
            android:id="@+id/tv_num_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_current"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/label_current" />

        <TextView
            android:id="@+id/label_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_month"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_avatar"
            android:text="@string/label_week" />

        <TextView
            android:id="@+id/tv_num_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_month"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/label_current" />

        <TextView
            android:id="@+id/label_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_week"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/img_avatar"
            android:text="@string/label_today" />

        <TextView
            android:id="@+id/tv_num_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_week"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/label_current" />

        <LinearLayout
            android:id="@+id/ln_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_num_today"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="9" >

            <Button
                android:id="@+id/btn_show_off"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:text="@string/btn_show_off" />

            <Button
                android:id="@+id/btn_exchange"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:text="@string/btn_exchange" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/rl_overview"
        android:background="@color/grey" />

    <com.vn.cooperate.moneyhunter.view.TabPageIndicator
        android:id="@+id/tab_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider" />

    <android.support.v4.view.ViewPager
        android:id="@+id/home_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_indicator" />

</RelativeLayout>