<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/img_avatar_fr"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/img_avatar_fr"
        android:text="@string/txt_creat_date" />

    <TextView
        android:id="@+id/date_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/tv_create" />

    <TextView
        android:id="@+id/share_benefit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_create"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/img_avatar_fr"
        android:text="@string/txt_share_benefit" />

    <TextView
        android:id="@+id/app_benefit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_benefit"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/img_avatar_fr"
        android:text="@string/app_benefit" />

    <TextView
        android:id="@+id/money_from_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/share_benefit"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/app_benefit" />

    <TextView
        android:id="@+id/friend_benefit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_benefit"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/img_avatar_fr"
        android:text="@string/friend_benefit" />

    <TextView
        android:id="@+id/money_from_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_benefit"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/friend_benefit" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/friend_benefit"
        android:layout_marginTop="10dp"
        android:background="@color/grey" />

    <TextView
        android:id="@+id/title_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@id/title_intro"
        android:layout_marginTop="10dp"
        android:background="@color/grey" />

    <GridView
        android:id="@+id/grd_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginTop="10dp"
        android:horizontalSpacing="3dp"
        android:numColumns="2"
        android:verticalSpacing="5dp" />

</RelativeLayout>